--- a/app/src/main/res/layout/activity_liva_data.xml
+++ b/app/src/main/res/layout/activity_liva_data.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_marginTop="80dp"
-        android:text="@string/send_text"
+        android:text="接收文案"
         android:textColor="#ff7767"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
